--- a/api-mercado/package.json
+++ b/api-mercado/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "postinstall": "npx prisma generate"
+    "postinstall": "npx prisma generate",
+      "start": "node index.js"
   },
   "prisma": {
     "seed": "node prisma/seed.ts"
